# Inter_IIT_Tech_Meet_14.0

./: README_SUBMISSION.txt
bash_files/: nav2lifecycle.sh  ros_nuke.sh  run_ros.sh
src/eternal_bringup/: CMakeLists.txt  package.xml
src/eternal_bringup/launch/: load_ros2_controllers.launch.py  mask_server_launch.py
src/eternal_bringup/maps/: arena.pgm  arena.yaml  arena_keepout.pgm  arena_keepout.yaml  code.ipynb  rack_detection.py
src/eternal_bringup/scripts/: eternal_bot_navigation.sh  eternal_bot_slam.sh  eternal_gazebo_launch.sh
src/eternal_description/: CMakeLists.txt  README.md  package.xml
src/eternal_description/launch/: display.launch.xml  robot_state_publisher.launch.py
src/eternal_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  rosmaster_x3_ros2_control.urdf.xacro
src/eternal_description/urdf/mech/: mecanum_wheel.urdf.xacro  rosmaster_x3_base.urdf.xacro
src/eternal_description/urdf/robots/: rosmaster_x3.urdf.xacro
src/eternal_description/urdf/sensors/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
src/eternal_gazebo/: CMakeLists.txt  package.xml
src/eternal_gazebo/config/: ros_gz_bridge.yaml
src/eternal_gazebo/launch/: eternal.gazebo.launch.py  eternal_keepoutnav2.gazebo.launch.py  eternal_slam.gazebo.launch.py
src/eternal_gazebo/params/: nav2_params.yaml  slam_params.yaml
src/hmi/: CMakeLists.txt  package.xml
src/hmi/rviz/: rviz_for_nav.rviz  (+1 more)
src/mecanum_drive_controller/: CMakeLists.txt  package.xml
src/navigation/: package.xml  setup.py
src/scanning/: package.xml  setup.py
src/utils/: package.xml  setup.py
(+21 files in other folders)
